--- a/core/templates/core/job_platform_preferences.html
+++ b/core/templates/core/job_platform_preferences.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% load static %} {% block content %}
+{% extends 'core/base.html' %} {% load static %} {% block content %}
 <div class="container mt-4">
   <div class="row">
     <div class="col-md-8 offset-md-2">
